--- a/traffic-fe/index.html
+++ b/traffic-fe/index.html
@@ -7,6 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
+    <script src="https://api.map.baidu.com/api?v=3.0&amp;ak=KOmVjPVUAey1G2E8zNhPiuQ6QiEmAwZu"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/getscript?v=3.0&amp;ak=KOmVjPVUAey1G2E8zNhPiuQ6QiEmAwZu&amp;services=&amp;t=20220621153304"></script>
+    <script src="https://fastly.jsdelivr.net/npm/echarts@5.3.3/dist/extension/bmap.min.js"></script>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
